# OpenCVCudaSample

./: CMakeLists.txt  OpenCVCudaSample.cbp
include/: deviceinfoes.h  kernel.h  timer.h  toolfunctions.h
src/: deviceinfoes.cpp  kernel.cu  main.cpp  toolfunctions.cpp
